--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "lucide-react": "^0.176.0",
+    "nanoid": "^4.0.2",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
@@ -30,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-textarea-autosize": "^8.4.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
