--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@tailwindcss/forms": "^0.5.3",
@@ -21,6 +22,7 @@
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "lucide-react": "^0.176.0",
@@ -28,10 +30,13 @@
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-textarea-autosize": "^8.4.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
