--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.3.1",
     "react-textarea-autosize": "^8.4.1",
+    "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
