--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-config-next": "13.3.1",
     "lucide-react": "^0.176.0",
     "nanoid": "^4.0.2",
-    "next": "13.3.1",
+    "next": "^13.2.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "pusher": "^5.1.3",
